<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.versionhash.watoolkit.activity.customreplyeditor.CustomReplyEditorActivity">

    <RadioGroup
        android:id="@+id/condition_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/incomingMsgInputLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/anything_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="anything"
            android:text="@string/anything" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/exact_match_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:tag="exact"
            android:text="@string/exact" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/starts_with_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="startwith"
            android:text="@string/startwith" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/contains_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="contains"
            android:text="@string/contains" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/does_not_contains_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:tag="notcontains"
            android:text="@string/doesnotcontain" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/anything_condition_type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/condition_type_radio_group"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/static_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:tag="static"
            android:text="@string/staticType" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/server_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="false"
            android:tag="server"
            android:text="@string/webserver" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/incomingMsgInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/condition_type_radio_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/incomingMsgTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/conditionMsgAutoReplyLabel" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/autoReplyTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:counterEnabled="true"
        app:counterMaxLength="500"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/incomingMsgInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/replyMessageTextInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/addRuleLabel"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveCustomReplyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/autoReplyTextInputLayout" />

    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>