<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.versionhash.watoolkit.activity.main.MainActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/adView">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TipTime">
            <!--        <com.google.android.material.tabs.TabLayout-->
            <!--            android:id="@+id/tabs"-->
            <!--            android:layout_width="match_parent"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:background="?attr/colorPrimary"-->
            <!--            app:tabTextColor="?attr/colorOnPrimary"-->
            <!--            />-->
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_contacts" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_rules" />

            </com.google.android.material.tabs.TabLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/mainActivityBannerAdID"
        android:layout_gravity="center|bottom"
        android:layout_alignParentBottom="true"/>

<!--    <LinearLayout-->
<!--        android:id="@+id/banner_container"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:orientation="vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent" >-->
<!--        <com.google.android.gms.ads.AdView-->
<!--            xmlns:ads="http://schemas.android.com/apk/res-auto"-->
<!--            android:id="@+id/adView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            ads:adSize="BANNER"-->
<!--            ads:adUnitId="@string/mainActivityBannerAdID">-->
<!--        </com.google.android.gms.ads.AdView>-->
<!--    </LinearLayout>-->

</RelativeLayout>