<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/message_layout"
    android:layout_width="match_parent"
    android:minHeight="80dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="15dp"
    android:layout_marginRight="8dp"
    android:orientation="horizontal"
    android:weightSum="2">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:weightSum="5">

            <!-- Media -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_baseline_mark_chat_unread_24"
                android:scaleType="centerInside"
                android:contentDescription="@string/img"
                android:layout_weight="4"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incomingMsgHeader"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    />

                <TextView
                    android:id="@+id/expected_msg_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/incomingMsg"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />
            </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="5">

        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_baseline_reply_24"
            android:scaleType="centerInside"
            android:contentDescription="@string/img"
            android:layout_weight="4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_reply_message"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                />
            <TextView
                android:id="@+id/reply_msg_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/replyMsg"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hidden_ruleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:visibility="gone" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/padding_sixteen"
            android:layout_marginEnd="@dimen/padding_sixteen"
            android:backgroundTint="@android:color/holo_red_dark"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/padding_sixteen"
            android:layout_marginEnd="@dimen/padding_sixteen"
            android:gravity="center_vertical"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_edit"
            app:iconGravity="textStart"
            app:iconPadding="0dp" />

    </LinearLayout>
</LinearLayout>

